Sending translation for Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: virt-manager.tip\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-14 17:10-0500\n"
-"PO-Revision-Date: 2009-12-16 12:19-0300\n"
+"PO-Revision-Date: 2009-12-18 12:54-0300\n"
 "Last-Translator: Héctor Daniel Cabrera <logan@fedoraproject.org>\n"
 "Language-Team: Fedora Spanish <fedora-trans-es@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -3243,17 +3243,16 @@ msgstr "Offset del R_eloj:"
 #: ../src/vmm-details.glade.h:30
 #, fuzzy
 msgid "Change a_llocation:"
-msgstr "Cambiar asignación:"
+msgstr "Modificar a_lojamiento:"
 
 #: ../src/vmm-details.glade.h:31
 #, fuzzy
 msgid "Char"
-msgstr "Char"
+msgstr "Caracter"
 
 #: ../src/vmm-details.glade.h:32
-#, fuzzy
 msgid "Connect or disconnect media"
-msgstr "Conexión está desconectada."
+msgstr "Conectar o desconectar medio"
 
 #: ../src/vmm-details.glade.h:33
 msgid "Console"
@@ -3264,7 +3263,6 @@ msgid "Current allocation:"
 msgstr "Asignación actual:"
 
 #: ../src/vmm-details.glade.h:35
-#, fuzzy
 msgid "D_ynamic"
 msgstr "D_inámico"
 
@@ -3277,50 +3275,45 @@ msgid "Device Type:"
 msgstr "Tipo de dispositivo:"
 
 #: ../src/vmm-details.glade.h:39
-#, fuzzy
 msgid "Device model:"
 msgstr "Modelo de dispositivo:"
 
 #: ../src/vmm-details.glade.h:40
 #, fuzzy
 msgid "Device virtual machine will _boot from:"
-msgstr "Dispositivo de máquina virtual arrancará de:"
+msgstr "El dispositivo de la máquina virtual _arrancará desde:"
 
 #: ../src/vmm-details.glade.h:42
 msgid "Disk"
 msgstr "Disco"
 
 #: ../src/vmm-details.glade.h:43
-#, fuzzy
 msgid ""
 "Disk\n"
 "I/O:"
 msgstr ""
 "E/S\n"
-"Disco:"
+"de disco:"
 
 #: ../src/vmm-details.glade.h:45
 msgid "Emulator:"
 msgstr "Emulador:"
 
 #: ../src/vmm-details.glade.h:46
-#, fuzzy
 msgid "Enable A_CPI:"
-msgstr "Habilitar audio:"
+msgstr "Habilitar A_CPI:"
 
 #: ../src/vmm-details.glade.h:47
-#, fuzzy
 msgid "Enable A_PIC:"
-msgstr "Habilitar audio:"
+msgstr "Habilitar A_PIC:"
 
 #: ../src/vmm-details.glade.h:48
 msgid "Heads:"
 msgstr "Encabezados:"
 
 #: ../src/vmm-details.glade.h:49
-#, fuzzy
 msgid "Host CPUs:"
-msgstr "CPUs logicas del anfitrión:"
+msgstr "CPUs del equipo:"
 
 #: ../src/vmm-details.glade.h:50
 #: ../src/vmm-host.glade.h:22
@@ -3335,12 +3328,12 @@ msgstr "_asociación inicial:"
 #: ../src/vmm-details.glade.h:56
 #, fuzzy
 msgid "M_odel:"
-msgstr "Modelo:"
+msgstr "M_odelo:"
 
 #: ../src/vmm-details.glade.h:57
 #, fuzzy
 msgid "Ma_ximum allocation:"
-msgstr "Asignación máxima:"
+msgstr "Alojamiento má_ximo:"
 
 #: ../src/vmm-details.glade.h:58
 msgid "Max Memory Select"
@@ -3351,23 +3344,20 @@ msgid "Maximum allocation:"
 msgstr "Asignación máxima:"
 
 #: ../src/vmm-details.glade.h:60
-#, fuzzy
 msgid "Mem"
 msgstr "Memoria"
 
 #: ../src/vmm-details.glade.h:61
-#, fuzzy
 msgid ""
 "Memory\n"
 "usage:"
 msgstr ""
 "Uso de\n"
-"Memoria:"
+"memoria:"
 
 #: ../src/vmm-details.glade.h:63
-#, fuzzy
 msgid "Memory Select"
-msgstr "Uso de Memoria"
+msgstr "Selección de memoria"
 
 #: ../src/vmm-details.glade.h:65
 #: ../src/vmm-host.glade.h:29
@@ -3375,23 +3365,20 @@ msgid "Name:"
 msgstr "Nombre:"
 
 #: ../src/vmm-details.glade.h:66
-#, fuzzy
 msgid "Net"
 msgstr "Red"
 
 #: ../src/vmm-details.glade.h:67
-#, fuzzy
 msgid ""
 "Network\n"
 "I/O:"
 msgstr ""
 "E/S\n"
-"de Red:"
+"de red:"
 
 #: ../src/vmm-details.glade.h:69
-#, fuzzy
 msgid "Over"
-msgstr "Otro"
+msgstr "Sobre"
 
 #: ../src/vmm-details.glade.h:71
 msgid "Pause"
@@ -3399,15 +3386,13 @@ msgstr "Pausa"
 
 #: ../src/vmm-details.glade.h:72
 #: ../src/vmm-manager.glade.h:3
-#, fuzzy
 msgid "Pause the virtual machine"
-msgstr "Máquina Virtual remota"
+msgstr "Pausar la máquina virtual"
 
 #: ../src/vmm-details.glade.h:74
 #: ../src/vmm-manager.glade.h:4
-#, fuzzy
 msgid "Power on the virtual machine"
-msgstr "Máquina Virtual remota"
+msgstr "Iniciar la máquina virtual"
 
 #: ../src/vmm-details.glade.h:75
 #, fuzzy
@@ -3435,7 +3420,7 @@ msgstr "_Apagar"
 #: ../src/vmm-details.glade.h:80
 #, fuzzy
 msgid "Send _Key"
-msgstr "Mandar Tecla"
+msgstr "Enviar _tecla"
 
 #: ../src/vmm-details.glade.h:81
 #, fuzzy
@@ -3443,17 +3428,14 @@ msgid "Sharea_ble:"
 msgstr "Posible de ser compartido:"
 
 #: ../src/vmm-details.glade.h:82
-#, fuzzy
 msgid "Show the graphical console"
-msgstr "Cuándo escalar la consola gráfica de la Máquina Virtual"
+msgstr "Mostrar la consola gráfica"
 
 #: ../src/vmm-details.glade.h:83
-#, fuzzy
 msgid "Show virtual hardware details"
-msgstr "Agregar nuevo hardware virtual"
+msgstr "Mostrar detalles de hardware virtual"
 
 #: ../src/vmm-details.glade.h:84
-#, fuzzy
 msgid "Shut Down"
 msgstr "Apagar"
 
@@ -3463,9 +3445,8 @@ msgstr "Apagar"
 
 #: ../src/vmm-details.glade.h:86
 #: ../src/vmm-manager.glade.h:7
-#, fuzzy
 msgid "Shutdown the virtual machine"
-msgstr "Máquina Virtual remota"
+msgstr "Apagar la máquina virtual"
 
 #: ../src/vmm-details.glade.h:88
 msgid "Source Path:"
@@ -3480,13 +3461,11 @@ msgid "Source path:"
 msgstr "Camino fuente:"
 
 #: ../src/vmm-details.glade.h:91
-#, fuzzy
 msgid "Start virt_ual machine on host boot up"
-msgstr "Guardar Foto de la Máquina Virtual"
+msgstr "Iniciar la máquina virt_ual cuando arranque el equipo"
 
 #: ../src/vmm-details.glade.h:92
 #: ../src/vmm-preferences.glade.h:27
-#, fuzzy
 msgid "Stats"
 msgstr "Estado"
 
@@ -3497,16 +3476,15 @@ msgstr "Cambiar a modo de pantalla completa"
 #: ../src/vmm-details.glade.h:95
 #, fuzzy
 msgid "T_oolbar"
-msgstr "Barra de Herramientas"
+msgstr "B_arra de Herramientas"
 
 #: ../src/vmm-details.glade.h:96
 msgid "Target device:"
 msgstr "Dispositivo destino:"
 
 #: ../src/vmm-details.glade.h:97
-#, fuzzy
 msgid "Total host memory:"
-msgstr "Memoria inicial:"
+msgstr "Memoria total del equipo:"
 
 #: ../src/vmm-details.glade.h:99
 msgid "UUID:"
@@ -3525,38 +3503,32 @@ msgid "Vid"
 msgstr "Vid"
 
 #: ../src/vmm-details.glade.h:103
-#, fuzzy
 msgid "Virtual CPU Affinity Select"
-msgstr "alerta de CPU virtual"
+msgstr "Elección de afinidad del CPU virtual"
 
 #: ../src/vmm-details.glade.h:104
-#, fuzzy
 msgid "Virtual CPU Select"
-msgstr "alerta de CPU virtual"
+msgstr "Elección del CPU virtual"
 
 #: ../src/vmm-details.glade.h:105
-#, fuzzy
 msgid "Virtual Machine"
-msgstr "_Máquina Virtual"
+msgstr "Máquina virtual"
 
 #: ../src/vmm-details.glade.h:106
 msgid "Virtual _Machine"
 msgstr "_Máquina Virtual"
 
 #: ../src/vmm-details.glade.h:107
-#, fuzzy
 msgid "_Always"
-msgstr "Siempre"
+msgstr "_Siempre"
 
 #: ../src/vmm-details.glade.h:108
-#, fuzzy
 msgid "_Clone"
-msgstr "_Explorar..."
+msgstr "_Clonar"
 
 #: ../src/vmm-details.glade.h:109
-#, fuzzy
 msgid "_Console"
-msgstr "Consola"
+msgstr "_Consola"
 
 #: ../src/vmm-details.glade.h:111
 #: ../src/vmm-host.glade.h:43
@@ -3567,7 +3539,7 @@ msgstr "_Archivo"
 #: ../src/vmm-details.glade.h:113
 #, fuzzy
 msgid "_Fullscreen"
-msgstr "Pantalla Completa"
+msgstr "_Pantalla completa"
 
 #: ../src/vmm-details.glade.h:114
 #: ../src/vmm-host.glade.h:44
@@ -3576,32 +3548,26 @@ msgid "_Help"
 msgstr "_Ayuda"
 
 #: ../src/vmm-details.glade.h:115
-#, fuzzy
 msgid "_Label:"
-msgstr "etiqueta"
+msgstr "_Etiqueta:"
 
 #: ../src/vmm-details.glade.h:116
-#, fuzzy
 msgid "_Login"
-msgstr "Ingreso:"
+msgstr "_Registro"
 
 #: ../src/vmm-details.glade.h:118
-#, fuzzy
 msgid "_Never"
-msgstr "Nunca"
+msgstr "_Nunca"
 
 #: ../src/vmm-details.glade.h:119
-#, fuzzy
 msgid "_Only when Fullscreen"
-msgstr "Sólo cuando esté en pantalla completa"
+msgstr "_Sólo cuando se encuentra en pantalla completa"
 
 #: ../src/vmm-details.glade.h:120
-#, fuzzy
 msgid "_Password:"
-msgstr "Contraseña:"
+msgstr "_Contraseña:"
 
 #: ../src/vmm-details.glade.h:123
-#, fuzzy
 msgid "_Resize to VM"
 msgstr "_Reducir a MV"
 
@@ -3610,19 +3576,16 @@ msgid "_Save"
 msgstr "_Guardar"
 
 #: ../src/vmm-details.glade.h:126
-#, fuzzy
 msgid "_Save this password in your keyring"
-msgstr "Guardar esta constraseña en su anillo de claves"
+msgstr "_Guardar esta constraseña en su administrador de claves"
 
 #: ../src/vmm-details.glade.h:127
-#, fuzzy
 msgid "_Scale Display"
-msgstr "Escalar pantalla"
+msgstr "_Escalar monitor"
 
 #: ../src/vmm-details.glade.h:128
-#, fuzzy
 msgid "_Static"
-msgstr "Estado"
+msgstr "_Estatica"
 
 #: ../src/vmm-details.glade.h:129
 msgid "_Take Screenshot"
@@ -3631,12 +3594,11 @@ msgstr "Tomar _Foto"
 #: ../src/vmm-details.glade.h:130
 #, fuzzy
 msgid "_Text Consoles"
-msgstr "Consola"
+msgstr "Consolas de _texto"
 
 #: ../src/vmm-details.glade.h:131
-#, fuzzy
 msgid "_Username:"
-msgstr "Nombre de equipo:"
+msgstr "_Nombre de usuario:"
 
 #: ../src/vmm-details.glade.h:132
 #: ../src/vmm-manager.glade.h:21
@@ -3645,9 +3607,8 @@ msgstr "_Vista"
 
 #: ../src/vmm-details.glade.h:133
 #: ../src/vmm-host.glade.h:46
-#, fuzzy
 msgid "_View Manager"
-msgstr "Ver Administrador"
+msgstr "_Ver administrador"
 
 #: ../src/vmm-host.glade.h:1
 msgid "<b>Basic details</b>"
@@ -3658,9 +3619,8 @@ msgid "<b>IPv4 configuration</b>"
 msgstr "<b>configuración IPv4</b>"
 
 #: ../src/vmm-host.glade.h:3
-#, fuzzy
 msgid "<b>Name:</b>"
-msgstr "<b>Destino:</b>"
+msgstr "<b>Nombre:</b>"
 
 #: ../src/vmm-host.glade.h:5
 msgid "<b>Volumes</b>"
@@ -3668,23 +3628,20 @@ msgstr "<b>Volúmenes</b>"
 
 #: ../src/vmm-host.glade.h:6
 #: ../src/vmm-open-connection.glade.h:1
-#, fuzzy
 msgid "A_utoconnect:"
-msgstr "Autoconectar:"
+msgstr "A_utoconectar:"
 
 #: ../src/vmm-host.glade.h:7
-#, fuzzy
 msgid "A_utostart:"
-msgstr "Autoiniciar:"
+msgstr "A_utoiniciar:"
 
 #: ../src/vmm-host.glade.h:9
 msgid "Add Network"
 msgstr "Añadir Red"
 
 #: ../src/vmm-host.glade.h:10
-#, fuzzy
 msgid "Add Pool"
-msgstr "Añadir Pila"
+msgstr "Añadir grupo"
 
 #: ../src/vmm-host.glade.h:12
 msgid "CPU usage:"
@@ -3707,9 +3664,8 @@ msgid "Delete Network"
 msgstr "Eliminar Red"
 
 #: ../src/vmm-host.glade.h:17
-#, fuzzy
 msgid "Delete Pool"
-msgstr "Eliminar Pila"
+msgstr "Eliminar grupo"
 
 #: ../src/vmm-host.glade.h:19
 msgid "Forwarding:"
@@ -3744,27 +3700,24 @@ msgid "Memory:"
 msgstr "Memoria:"
 
 #: ../src/vmm-host.glade.h:30
-#, fuzzy
 msgid "Network Interfaces"
-msgstr "Tráfico de Red"
+msgstr "Interfaces de red"
 
 #: ../src/vmm-host.glade.h:32
 msgid "Overview"
 msgstr "Repaso"
 
 #: ../src/vmm-host.glade.h:33
-#, fuzzy
 msgid "Pool Type:"
-msgstr "Tipo de Pila:"
+msgstr "Tipo de grupo:"
 
 #: ../src/vmm-host.glade.h:34
 msgid "Start Network"
 msgstr "Iniciar red"
 
 #: ../src/vmm-host.glade.h:35
-#, fuzzy
 msgid "Start Pool"
-msgstr "Iniciar Pila"
+msgstr "Iniciar grupo"
 
 #: ../src/vmm-host.glade.h:36
 msgid "State:"
@@ -3775,82 +3728,70 @@ msgid "Stop Network"
 msgstr "Detener Red"
 
 #: ../src/vmm-host.glade.h:38
-#, fuzzy
 msgid "Stop Pool"
-msgstr "Detener Pila"
+msgstr "Detener grupo"
 
 #: ../src/vmm-host.glade.h:41
 msgid "Virtual Networks"
 msgstr "Redes Virtuales"
 
 #: ../src/vmm-host.glade.h:42
-#, fuzzy
 msgid "_Delete Volume"
-msgstr "Borrar Volumen"
+msgstr "_Eliminar volumen"
 
 #: ../src/vmm-host.glade.h:45
 #: ../src/vmm-storage-browse.glade.h:4
-#, fuzzy
 msgid "_New Volume"
-msgstr "Nuevo Volumen"
+msgstr "_Nuevo volumen"
 
 #: ../src/vmm-host.glade.h:47
-#, fuzzy
 msgid "insert type"
-msgstr "<b>Consolas</b>"
+msgstr "insertar tipo"
 
 #: ../src/vmm-manager.glade.h:1
-#, fuzzy
 msgid "Create a new virtual machine"
-msgstr "Crear una red virtual nueva"
+msgstr "Crear una máquina virtual nueva"
 
 #: ../src/vmm-manager.glade.h:2
-#, fuzzy
 msgid "New"
-msgstr "_Vista"
+msgstr "Nueva"
 
 #: ../src/vmm-manager.glade.h:5
 msgid "Restore a saved machine from a filesystem image"
 msgstr "Restaurar una máquina guardada desde una imágen de sistema de archivo"
 
 #: ../src/vmm-manager.glade.h:6
-#, fuzzy
 msgid "Show the virtual machine console and details"
-msgstr "Detalles de Máquina Virtual"
+msgstr "Mostar detalles y consola de la máquina virtual"
 
 #: ../src/vmm-manager.glade.h:9
 #, fuzzy
 msgid "_CPU Usage"
-msgstr "Uso de CPU"
+msgstr "Utilización del _CPU"
 
 #: ../src/vmm-manager.glade.h:10
 #: ../src/vmm-preferences.glade.h:29
-#, fuzzy
 msgid "_Disk I/O"
-msgstr "Disco E/S"
+msgstr "E/S de _Disco"
 
 #: ../src/vmm-manager.glade.h:11
 msgid "_Edit"
 msgstr "_Editar"
 
 #: ../src/vmm-manager.glade.h:13
-#, fuzzy
 msgid "_Graph"
-msgstr "Consola _Gráfica"
+msgstr "_Gráfico"
 
 #: ../src/vmm-manager.glade.h:15
-#, fuzzy
 msgid "_Host Details"
-msgstr "Detalles del Anfitrión"
+msgstr "Detalles del _equipo"
 
 #: ../src/vmm-manager.glade.h:16
 #: ../src/vmm-preferences.glade.h:32
-#, fuzzy
 msgid "_Network I/O"
-msgstr "Red E/S"
+msgstr "E/S de Red"
 
 #: ../src/vmm-manager.glade.h:17
-#, fuzzy
 msgid "_Open"
 msgstr "_Abrir"
 
@@ -3859,9 +3800,8 @@ msgid "_Shutdown"
 msgstr "_Apagar"
 
 #: ../src/vmm-migrate.glade.h:1
-#, fuzzy
 msgid "<b>Connectivity</b>"
-msgstr "Conectividad:"
+msgstr "<b>Conectividad</b>"
 
 #: ../src/vmm-migrate.glade.h:2
 msgid "<span color='#484848'>Migrate _offline:</span>"
@@ -3884,9 +3824,8 @@ msgid "Mbps"
 msgstr "Mbps"
 
 #: ../src/vmm-migrate.glade.h:8
-#, fuzzy
 msgid "Migrate the virtual machine"
-msgstr "Máquina Virtual remota"
+msgstr "Migrar la máquina virtual"
 
 #: ../src/vmm-migrate.glade.h:10
 #, fuzzy
@@ -3903,38 +3842,33 @@ msgid "_Tunnel migration through libvirt's daemon:"
 msgstr "Migración _tunelizada mediante el demonio de libvirt:"
 
 #: ../src/vmm-open-connection.glade.h:2
-#, fuzzy
 msgid "Add Connection"
-msgstr "Tipo de conección:"
+msgstr "Agregar conexión"
 
 #: ../src/vmm-open-connection.glade.h:3
 msgid "Co_nnect"
 msgstr "Co_nectar"
 
 #: ../src/vmm-open-connection.glade.h:4
-#, fuzzy
 msgid "Connec_tion:"
-msgstr "Conección:"
+msgstr "Conec_ción:"
 
 #: ../src/vmm-open-connection.glade.h:5
-#, fuzzy
 msgid "Connection Select"
-msgstr "Tipo de conexión:"
+msgstr "Elección de la conexión"
 
 #: ../src/vmm-open-connection.glade.h:6
 #, fuzzy
 msgid "H_ostname:"
-msgstr "Nombre de equipo:"
+msgstr "Nombre del e_quipo:"
 
 #: ../src/vmm-open-connection.glade.h:7
-#, fuzzy
 msgid "Hostname Field"
-msgstr "Nombre de equipo:"
+msgstr "Caompo de nombre del equipo"
 
 #: ../src/vmm-open-connection.glade.h:8
-#, fuzzy
 msgid "Hypervisor Select"
-msgstr "Hipervisor:"
+msgstr "Elección del hipervisor"
 
 #: ../src/vmm-open-connection.glade.h:9
 msgid ""
@@ -3949,56 +3883,48 @@ msgstr ""
 "Tunel sobre SSH remoto"
 
 #: ../src/vmm-open-connection.glade.h:13
-#, fuzzy
 msgid ""
 "Xen\n"
 "QEMU/KVM"
 msgstr ""
 "Xen\n"
-"QEMU"
+"QEMU/KVM"
 
 #: ../src/vmm-open-connection.glade.h:15
-#, fuzzy
 msgid "_Hypervisor:"
-msgstr "Hipervisor:"
+msgstr "_Hipervisor:"
 
 #: ../src/vmm-preferences.glade.h:1
-#, fuzzy
 msgid "<b>Confirmations</b>"
-msgstr "<b>configuración IPv4</b>"
+msgstr "<b>Confirmaciones</b>"
 
 #: ../src/vmm-preferences.glade.h:2
 msgid "<b>Consoles</b>"
 msgstr "<b>Consolas</b>"
 
 #: ../src/vmm-preferences.glade.h:3
-#, fuzzy
 msgid "<b>Enable Stats Polling</b>"
-msgstr "<b>Habilitar Sondeo de Estadísticas</b>"
+msgstr "<b>Habilitar sondeo de estadísticas</b>"
 
 #: ../src/vmm-preferences.glade.h:4
-#, fuzzy
 msgid "<b>General</b>"
-msgstr "<b>Puntero</b>"
+msgstr "<b>General</b>"
 
 #: ../src/vmm-preferences.glade.h:5
-#, fuzzy
 msgid "<b>New VM</b>"
-msgstr "<b>Nueva máquina virtual</b>"
+msgstr "<b>Nueva MV</b>"
 
 #: ../src/vmm-preferences.glade.h:6
 msgid "<b>Stats Options</b>"
 msgstr "<b>Opciones de Estadísticas</b>"
 
 #: ../src/vmm-preferences.glade.h:7
-#, fuzzy
 msgid "Automatically _open consoles:"
-msgstr "Abrir automáticamente consolas:"
+msgstr "_Abrir consolas automáticamente:"
 
 #: ../src/vmm-preferences.glade.h:8
-#, fuzzy
 msgid "Device re_moval:"
-msgstr "Modelo de dispositivo:"
+msgstr "El_iminación de dispositivo:"
 
 #: ../src/vmm-preferences.glade.h:9
 #, fuzzy
@@ -4006,7 +3932,6 @@ msgid "Enable _system tray icon"
 msgstr "Habilitar icono en el _area de notificación"
 
 #: ../src/vmm-preferences.glade.h:10
-#, fuzzy
 msgid "Feedback"
 msgstr "Retroalimentación"
 
@@ -4015,34 +3940,30 @@ msgid "General"
 msgstr "General"
 
 #: ../src/vmm-preferences.glade.h:12
-#, fuzzy
 msgid "Grab _keyboard input:"
-msgstr "Capturar la entrada del teclado:"
+msgstr "Capturar entrada del _teclado:"
 
 #: ../src/vmm-preferences.glade.h:13
-#, fuzzy
 msgid "Graphical console _scaling:"
-msgstr "Escalado de Consola _Gráfica"
+msgstr "_Escalado de consola gráfica:"
 
 #: ../src/vmm-preferences.glade.h:14
-#, fuzzy
 msgid "Install Audio Device:"
 msgstr "Instalar dispositivo de audio:"
 
 #: ../src/vmm-preferences.glade.h:15
 #, fuzzy
 msgid "Maintain h_istory of"
-msgstr "Mantener la historia de"
+msgstr "Mantener la h_istoria de"
 
 #: ../src/vmm-preferences.glade.h:16
-#, fuzzy
 msgid ""
 "Never\n"
 "For all new domains\n"
 "For all domains"
 msgstr ""
 "Nunca\n"
-"Para nuevos dominios\n"
+"Para todos los dominios nuevos\n"
 "Para todos los dominios"
 
 #: ../src/vmm-preferences.glade.h:19
@@ -4078,29 +3999,25 @@ msgid "VM Details"
 msgstr "Detalles de máquina virtual"
 
 #: ../src/vmm-preferences.glade.h:30
-#, fuzzy
 msgid "_Force Poweroff:"
-msgstr "Forzar apagado"
+msgstr "_Forzar apagado:"
 
 #: ../src/vmm-preferences.glade.h:31
-#, fuzzy
 msgid "_Local virtual machine"
-msgstr "Guardando Máquina Virtual"
+msgstr "Máquina virtual _local"
 
 #: ../src/vmm-preferences.glade.h:33
-#, fuzzy
 msgid "_Pause:"
-msgstr "_Pausa"
+msgstr "_Pausa:"
 
 #: ../src/vmm-preferences.glade.h:34
 #, fuzzy
 msgid "_Remote virtual machine"
-msgstr "Máquina Virtual remota"
+msgstr "Máquina virtual _remota"
 
 #: ../src/vmm-preferences.glade.h:35
-#, fuzzy
 msgid "_Update status every"
-msgstr "Actualizar el estado cada"
+msgstr "_Actualizar el estado cada"
 
 #: ../src/vmm-preferences.glade.h:36
 msgid "samples"
@@ -4111,19 +4028,16 @@ msgid "seconds"
 msgstr "segundos"
 
 #: ../src/vmm-storage-browse.glade.h:1
-#, fuzzy
 msgid "Choose Storage Volume"
-msgstr "Añadir un Volumen de Almacenaje"
+msgstr "Elija un volumen de Almacenamiento"
 
 #: ../src/vmm-storage-browse.glade.h:2
-#, fuzzy
 msgid "Choose _Volume"
-msgstr "Crear _Volumen"
+msgstr "Elija _Volumen"
 
 #: ../src/vmm-storage-browse.glade.h:3
-#, fuzzy
 msgid "_Browse Local"
-msgstr "Explorar"
+msgstr "_Explore localmente"
 
 #~ msgid "ISO _Location:"
 #~ msgstr "Ubicación de_l ISO:"
