Sending translation for Polish

--- a/po/pl.po
+++ b/po/pl.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-14 17:10-0500\n"
-"PO-Revision-Date: 2009-12-10 17:00+0100\n"
+"PO-Revision-Date: 2009-12-19 09:47+0100\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <fedora-trans-pl@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -616,11 +616,11 @@ msgstr "Należy podać ścieżkę do nośnika."
 
 #: ../src/virtManager/choosecd.py:158
 msgid "Floppy D_rive"
-msgstr ""
+msgstr "Napęd dys_kietek"
 
 #: ../src/virtManager/choosecd.py:159
 msgid "Floppy _Image"
-msgstr ""
+msgstr "Obraz dysk_ietki"
 
 #: ../src/virtManager/clone.py:222 ../src/virtManager/clone.py:438
 msgid "Details..."
@@ -2493,18 +2493,16 @@ msgid "label"
 msgstr "etykieta"
 
 #: ../src/vmm-choose-cd.glade.h:1
-#, fuzzy
 msgid "<b>Choose Source Device or File</b>"
-msgstr "<b>Źródłowe urządzenie CD lub plik</b>"
+msgstr "<b>Wybór urządzenia lub pliku źródłowego</b>"
 
 #: ../src/vmm-choose-cd.glade.h:2
 msgid "CD-_ROM or DVD"
 msgstr "Płyta CD-_ROM lub DVD"
 
 #: ../src/vmm-choose-cd.glade.h:3
-#, fuzzy
 msgid "Choose Media"
-msgstr "Wybór nośnika CD"
+msgstr "Wybór nośnika"
 
 #: ../src/vmm-choose-cd.glade.h:4 ../src/vmm-clone.glade.h:23
 msgid "_Browse..."
@@ -4057,6 +4055,3 @@ msgstr "Wybierz _wolumin"
 #: ../src/vmm-storage-browse.glade.h:3
 msgid "_Browse Local"
 msgstr "_Przeglądaj lokalne"
-
-#~ msgid "ISO _Location:"
-#~ msgstr "_Położenie pliku ISO:"
